Hook up POC localstorage

--- a/assets/src/sass/config/_variables.scss
+++ b/assets/src/sass/config/_variables.scss
@@ -17,6 +17,7 @@ $color--default: $color--off-black;
 
 // NHS colours
 $color--nhs-blue: #015eb8;
+$color--border-black: #212b32;
 
 // Button colours
 $button-colours: (
