--- a/assets/src/sass/layout/_wrapper.scss
+++ b/assets/src/sass/layout/_wrapper.scss
@@ -1,4 +1,13 @@
+@use 'config' as *;
+
 .wrapper {
+    padding: 0 20px;
+    margin: 0 auto;
+
+    &--default {
+        max-width: $site-width;
+    }
+
     &--small {
         max-width: 755px;
     }
