--- a/assets/src/sass/main.scss
+++ b/assets/src/sass/main.scss
@@ -5,6 +5,7 @@
 // Components
 
 // Forms
+@use 'components/forms/form';
 @use 'components/forms/checkbox';
 @use 'components/forms/custom-select';
 @use 'components/forms/fileinput';
