--- a/assets/src/sass/main.scss
+++ b/assets/src/sass/main.scss
@@ -7,12 +7,14 @@
 // Forms
 @use 'components/forms/form';
 @use 'components/forms/checkbox';
-@use 'components/forms/custom-select';
 @use 'components/forms/fileinput';
 @use 'components/skip-link';
+@use 'components/forms/radio';
+@use 'components/forms/select';
 
 // Layout
 @use 'layout/footer';
+@use 'layout/grid';
 @use 'layout/header';
 @use 'layout/wrapper';
 
