--- a/assets/src/sass/config/_variables.scss
+++ b/assets/src/sass/config/_variables.scss
@@ -19,7 +19,11 @@ $color--default: $color--off-black;
 $color--nhs-blue: #015eb8;
 $color--border-black: #212b32;
 $color--border-grey: #d8dde0;
+$color--blue-grey: #4c6272;
+$color--link: #017aad;
 $color--helptext: #768692;
+$color--green: #29823b;
+$color--red: #d5281b;
 
 // Button colours
 $button-colours: (
