--- a/assets/src/sass/config/_variables.scss
+++ b/assets/src/sass/config/_variables.scss
@@ -24,6 +24,7 @@ $color--link: #017aad;
 $color--helptext: #768692;
 $color--green: #29823b;
 $color--red: #d5281b;
+$color--email: #005eb8;
 
 // Button colours
 $button-colours: (
