Add header and improve UI

--- a/assets/src/sass/components/_tag.scss
+++ b/assets/src/sass/components/_tag.scss
@@ -17,4 +17,12 @@
     &--red {
         background-color: $color--red;
     }
+
+    &--light-blue {
+        background-color: $color--nhs-blue;
+    }
+
+    &--width-auto {
+        display: inline-block;
+    }
 }
