--- a/assets/src/sass/config/_variables.scss
+++ b/assets/src/sass/config/_variables.scss
@@ -25,6 +25,7 @@ $color--helptext: #768692;
 $color--green: #29823b;
 $color--red: #d5281b;
 $color--email: #005eb8;
+$color--yellow: #ffb81c;
 
 // Button colours
 $button-colours: (
