--- a/assets/src/sass/components/forms/_form.scss
+++ b/assets/src/sass/components/forms/_form.scss
@@ -1,8 +1,7 @@
 @use 'config' as *;
 
 .form {
-    max-width: $form-width;
-    margin-bottom: 100px;
+    margin-bottom: 50px;
 
     &__legend {
         @include rem-font-size(30px);
@@ -35,8 +34,9 @@
 
     &__item {
         display: grid;
-        grid-template-columns: 3fr 4fr;
+        grid-template-columns: 3fr 4fr 2fr;
         margin: 15px 0 5px;
+        column-gap: 20px;
         align-items: start;
 
         .view-mode & {
@@ -87,16 +87,24 @@
         display: block;
         width: 100%;
 
-        &--full-width {
+        &--full {
             max-width: 100%;
         }
 
-        &--two-thirds-width {
+        &--two-thirds {
             max-width: 66.66%;
         }
 
-        &--half-width {
+        &--half {
             max-width: 50%;
+        }
+
+        &--one-third {
+            max-width: 33.33%;
+        }
+
+        &--one-quarter {
+            max-width: 25%;
         }
 
         &--number {
@@ -124,5 +132,14 @@
             pointer-events: none;
             padding: 0;
         }
+    }
+
+    &__preferred-input-wrapper {
+        margin-left: 17px;
+    }
+
+    &__preferred-label {
+        @include font-size(supporting);
+        align-self: flex-end;
     }
 }
