--- a/assets/src/sass/layout/_header.scss
+++ b/assets/src/sass/layout/_header.scss
@@ -15,6 +15,7 @@
     &__logos {
         display: flex;
         justify-content: space-between;
+        align-items: center;
     }
 
     &__list {
