Re-organise and add progress pages

--- a/assets/src/sass/base/_typography.scss
+++ b/assets/src/sass/base/_typography.scss
@@ -24,7 +24,7 @@ html {
     font-family: $font--default;
     font-size: $base-font-size;
     line-height: 1.4;
-    color: $color--default;
+    color: $color--border-black;
 }
 
 /* ============================================
