--- a/assets/src/sass/config/_variables.scss
+++ b/assets/src/sass/config/_variables.scss
@@ -19,6 +19,7 @@ $color--default: $color--off-black;
 $color--nhs-blue: #015eb8;
 $color--border-black: #212b32;
 $color--border-grey: #d8dde0;
+$color--light-grey: #ced4da;
 $color--blue-grey: #4c6272;
 $color--link: #017aad;
 $color--helptext: #768692;
