--- a/assets/src/sass/main.scss
+++ b/assets/src/sass/main.scss
@@ -5,6 +5,7 @@
 // Components
 @use 'components/button';
 @use 'components/intro';
+@use 'components/progress-table';
 @use 'components/skip-link';
 @use 'components/tag';
 
