--- a/templates/details-edit.html
+++ b/templates/details-edit.html
@@ -6,7 +6,7 @@
         <meta name="description" content="NSHCS-TMS prototype" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="robots" content="noindex">
-        <link rel="stylesheet" type="text/css" href="./assets/dist/css/main.css">
+        <link rel="stylesheet" type="text/css" href="../assets/dist/css/main.css">
     </head>
 
     <body data-mode="edit">
@@ -57,8 +57,8 @@
                         </p>
                     </div>
                     <div>
-                        <button class="intro__button button button--green" data-save>Save changes</button>
-                        <button class="intro__button button button--cancel" data-cancel>Cancel</button>
+                        <button class="intro__button button button--green" data-save="details">Save changes</button>
+                        <button class="intro__button button button--cancel" data-cancel="details">Cancel</button>
                     </div>
                 </div>
 
@@ -563,13 +563,13 @@
                 <div class="intro">
                     <div></div>
                     <div>
-                        <button class="intro__button button button--green" data-save>Save changes</button>
-                        <button class="intro__button button button--cancel" data-cancel>Cancel</button>
+                        <button class="intro__button button button--green" data-save="details">Save changes</button>
+                        <button class="intro__button button button--cancel" data-cancel="details">Cancel</button>
                     </div>
                 </div>
             </div>
         </main>
-        <script src="./assets/dist/js/main.js"></script>
+        <script src="../assets/dist/js/main.js"></script>
     </body>
 </html>
 
