--- a/templates/details-view.html
+++ b/templates/details-view.html
@@ -6,7 +6,7 @@
         <meta name="description" content="NSHCS-TMS prototype" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="robots" content="noindex">
-        <link rel="stylesheet" type="text/css" href="./assets/dist/css/main.css">
+        <link rel="stylesheet" type="text/css" href="../assets/dist/css/main.css">
     </head>
 
     <body data-mode="view" class="view-mode">
@@ -28,10 +28,10 @@
                             <li class="header__list-item">
                                 <a href="#" class="header__link">Dashboard</a>
                             </li>
-                            <li class="header__list-item">
+                            <li class="header__list-item header__list-item--active">
                                 <a href="details-edit.html" class="header__link">Trainee details</a>
                             </li>
-                            <li class="header__list-item header__list-item--active">
+                            <li class="header__list-item">
                                 <a href="progress-edit.html" class="header__link">Progress</a>
                             </li>
                             <li class="header__list-item">
@@ -57,7 +57,7 @@
                         </p>
                     </div>
                     <div>
-                        <button class="intro__button button button--grey" data-edit>Edit this page</button>
+                        <button class="intro__button button button--grey" data-edit="details">Edit this page</button>
                     </div>
                 </div>
 
@@ -325,7 +325,7 @@
                 </form>
             </div>
         </main>
-        <script src="./assets/dist/js/main.js"></script>
+        <script src="../assets/dist/js/main.js"></script>
     </body>
 </html>
 
