--- a/assets/src/sass/components/forms/_form.scss
+++ b/assets/src/sass/components/forms/_form.scss
@@ -137,6 +137,19 @@
         &--textarea {
             width: 100%;
             height: 100px;
+            line-height: 20px;
+        }
+
+        &--textarea-tall {
+            width: 100%;
+            height: 250px;
+            line-height: 20px;
+        }
+
+        &--textarea-medium {
+            width: 100%;
+            height: 175px;
+            line-height: 20px;
         }
 
         .view-mode & {
@@ -159,6 +172,10 @@
         @include font-size(heading-two);
         line-height: 30px;
         grid-column: 2 / span 2;
+    }
+
+    &__bold-text {
+        font-weight: bold;
     }
 
     &__disabled-value {
