--- a/templates/support-view.html
+++ b/templates/support-view.html
@@ -29,13 +29,13 @@
                                 <a href="#" class="header__link">Dashboard</a>
                             </li>
                             <li class="header__list-item">
-                                <a href="#" class="header__link">Trainee details</a>
+                                <a href="details-edit.html" class="header__link">Trainee details</a>
                             </li>
                             <li class="header__list-item">
-                                <a href="#" class="header__link">Progression</a>
+                                <a href="progress-edit.html" class="header__link">Progress</a>
                             </li>
                             <li class="header__list-item header__list-item--active">
-                                <a href="support-edit.html" class="header__link">Support</a>
+                                <a href="support-index.html" class="header__link">Support</a>
                             </li>
                         </ul>
                     </nav>
@@ -57,7 +57,7 @@
                         </p>
                     </div>
                     <div>
-                        <button class="intro__button button button--grey" data-edit>Edit this page</button>
+                        <button class="intro__button button button--grey" data-edit="support">Edit this page</button>
                     </div>
                 </div>
 
@@ -65,262 +65,61 @@
 
                     <!-- Personal -->
                     <fieldset class="form__fieldset">
-                        <legend class="form__legend">Personal details</legend>
+                        <legend class="form__legend">Bereavement</legend>
 
                         <div class="form__item">
-                            <div class="form__label" for="name">Name</div>
-                            <div data-form="name"></div>
-                        </div>
-
-                        <div class="form__item">
-                            <p class="form__label" for="dob">Date of birth</p>
+                            <div class="form__label">Case opened</div>
                             <div data-date>
-                                <span data-form="dob-year"></span>
-                                <span data-form="dob-month"></span>
-                                <span data-form="dob-day"></span>
+                                <span data-form="case-opened-year"></span>
+                                <span data-form="case-opened-month"></span>
+                                <span data-form="case-opened-day"></span>
                             </div>
                         </div>
+
                         <div class="form__item">
-                            <p class="form__label">Home address</p>
+                            <p class="form__label">Issue</p>
+                            <div data-form="bereavement-issue"></div>
+                        </div>
+
+                        <div class="form__item">
+                            <p class="form__label">Description</p>
+                            <div data-form="bereavement-description"></div>
+                        </div>
+
+                        <div class="form__item">
+                            <p class="form__label">Support status</p>
+                            <div class="tag tag--red tag--width-auto" data-form="support-status"></div>
+                        </div>
+                    </fieldset>
+
+                    <!-- Case log -->
+                    <fieldset class="form__fieldset">
+                        <legend class="form__legend">Case log</legend>
+
+                        <div class="form__item">
                             <div>
-                                <div data-form="address-1" data-no-hide="true"></div>
-                                <div data-form="address-2" data-no-hide="true"></div>
-                                <div data-form="address-3" data-no-hide="true"></div>
-                                <div data-form="address-4" data-no-hide="true"></div>
-                                <div data-form="address-5" data-no-hide="true"></div>
-                            </div>
-                        </div>
-                        <div class="form__item">
-                            <p class="form__label">Work telephone</p>
-                            <div data-form="work-telephone"></div>
-                        </div>
-                        <div class="form__item">
-                            <p class="form__label">Personal telephone</p>
-                            <div data-form="personal-telephone"></div>
-                        </div>
-                        <div class="form__item">
-                            <p class="form__label">Work email</p>
-                            <div data-form="work-email"></div>
-                            <div data-form="preferred-1" data-no-hide="true"></div>
-                        </div>
-                        <div class="form__item">
-                            <p class="form__label">Academic email</p>
-                            <div data-form="academic-email"></div>
-                            <div data-form="preferred-2" data-no-hide="true"></div>
-                        </div>
-                        <div class="form__item">
-                            <p class="form__label">Personal email</p>
-                            <div data-form="personal-email"></div>
-                            <div data-form="preferred-3" data-no-hide="true"></div>
-                        </div>
-                    </fieldset>
-
-                    <!-- Training details -->
-                    <fieldset class="form__fieldset">
-                        <legend class="form__legend">Training details</legend>
-
-                        <div class="form__item">
-                            <p class="form__label">Programme</p>
-                            <div data-form="programme"></div>
-                        </div>
-
-                        <div class="form__item">
-                            <p class="form__label">Start date</p>
-                            <div data-date>
-                                <span data-form="start-date-2"></span>
-                                <span data-form="start-date-1"></span>
-                            </div>
-                        </div>
-
-                        <div class="form__item">
-                            <p class="form__label">Exit date (anticipated)</p>
-                            <div data-date>
-                                <span data-form="exit-date-2"></span>
-                                <span data-form="exit-date-1"></span>
-                            </div>
-                        </div>
-
-                        <div class="form__item">
-                            <p class="form__label">Entry type</p>
-                            <div data-form="entry-type"></div>
-                        </div>
-
-                        <div class="form__item">
-                            <p class="form__label">Funding provider</p>
-                            <div data-form="funding-provider"></div>
-                        </div>
-
-                        <div class="form__item">
-                            <p class="form__label">Specialism</p>
-                            <div data-form="specialism"></div>
-                        </div>
-
-                        <div class="form__item">
-                            <p class="form__label">HEI</p>
-                            <div data-form="hei"></div>
-                        </div>
-                    </fieldset>
-
-                    <!-- Training contacts -->
-                    <fieldset class="form__fieldset">
-                        <legend class="form__legend">Training contacts</legend>
-                        <fieldset class="form__fieldset form__fieldset--nested">
-                            <p class="form__sub-legend">Training officer</p>
-
-                            <div class="form__item">
-                                <p class="form__label">Name</p>
-                                <div data-form="training-name"></div>
-                            </div>
-
-                            <div class="form__item">
-                                <p class="form__label" for="contracts-training-from">From</p>
-                                <div data-date>
-                                    <span data-form="contracts-training-from-year"></span>
-                                    <span data-form="contracts-training-from-month"></span>
-                                    <span data-form="contracts-training-from-day"></span>
+                                <div class="form__label sr-only">Case 1 opened</div>
+                                <div data-date class="form__bold-text">
+                                    <span data-form="case-1-date-year"></span>
+                                    <span data-form="case-1-date-month"></span>
+                                    <span data-form="case-1-date-day"></span>
                                 </div>
                             </div>
+                            <div data-form="case-1-description"></div>
+                        </div>
 
-                            <div class="form__item">
-                                <p class="form__label">Current</p>
-                                <div data-form="training-current"></div>
-                            </div>
-
-                            <div class="form__item">
-                                <p class="form__label" for="contracts-training-to">To</p>
-                                <div data-date>
-                                    <span data-form="contracts-training-to-year"></span>
-                                    <span data-form="contracts-training-to-month"></span>
-                                    <span data-form="contracts-training-to-day"></span>
+                        <div class="form__item">
+                            <div>
+                                <div class="form__label sr-only">Case 2 opened</div>
+                                <div data-date class="form__bold-text">
+                                    <span data-form="case-2-date-year"></span>
+                                    <span data-form="case-2-date-month"></span>
+                                    <span data-form="case-2-date-day"></span>
                                 </div>
                             </div>
-
-                            <div class="form__item">
-                                <p class="form__label">Email</p>
-                                <div data-form="training-email"></div>
-                            </div>
-
-                            <div class="form__item">
-                                <p class="form__label">Telephone</p>
-                                <div data-form="training-telephone"></div>
-                            </div>
-                        </fieldset>
-
-                        <fieldset class="form__fieldset form__fieldset--nested">
-                            <p class="form__sub-legend">Head of department</p>
-
-                            <div class="form__item">
-                                <p class="form__label">Name</p>
-                                <div data-form="training-head-of-department-name"></div>
-                            </div>
-
-                            <div class="form__item">
-                                <p class="form__label" for="training-head-of-department-from">From</p>
-                                <div data-date>
-                                    <span data-form="training-head-of-department-from-year"></span>
-                                    <span data-form="training-head-of-department-from-month"></span>
-                                    <span data-form="training-head-of-department-from-day"></span>
-                                </div>
-                            </div>
-
-                            <div class="form__item">
-                                <p class="form__label">Current</p>
-                                <div data-form="current"></div>
-                            </div>
-
-                            <div class="form__item">
-                                <p class="form__label" for="training-head-of-department-to">To</p>
-                                <div data-date>
-                                    <span data-form="training-head-of-department-to-year"></span>
-                                    <span data-form="training-head-of-department-to-month"></span>
-                                    <span data-form="training-head-of-department-to-day"></span>
-                                </div>
-                            </div>
-
-                            <div class="form__item">
-                                <p class="form__label">Email</p>
-                                <div data-form="training-head-of-department-email"></div>
-                            </div>
-
-                            <div class="form__item">
-                                <p class="form__label">Telephone</p>
-                                <div data-form="training-head-of-department-telephone"></div>
-                            </div>
-                        </fieldset>
-                    </fieldset>
-
-                    <!-- Employment and training sites -->
-                    <fieldset class="form__fieldset">
-                        <legend class="form__legend">Employment and training sites</legend>
-
-                        <div class="form__item">
-                            <p class="form__label">Training trust</label>
-                            <div data-form="training-trust"></div>
+                            <div data-form="case-2-description"></div>
                         </div>
 
-                        <div class="form__item">
-                            <label class="form__label">Training hospital site</label>
-                            <div data-form="training-hospital-site"></div>
-                        </div>
-
-                        <div class="form__item">
-                            <p class="form__label" for="training-from">From</p>
-                            <div data-date>
-                                <span data-form="training-from-year"></span>
-                                <span data-form="training-from-month"></span>
-                                <span data-form="training-from-day"></span>
-                            </div>
-                        </div>
-
-                        <div class="form__item">
-                            <p class="form__label" for="training-to">To</p>
-                            <div data-date>
-                                <span data-form="training-to-year"></span>
-                                <span data-form="training-to-month"></span>
-                                <span data-form="training-to-day"></span>
-                            </div>
-                        </div>
-                    </fieldset>
-
-                     <!-- Pre-employment -->
-                    <fieldset class="form__fieldset">
-                        <legend class="form__legend">Pre-employment</legend>
-                        <p class="form__sub-legend">Previous qualifications</p>
-
-                        <div class="form__item">
-                            <p class="form__label">Qualification type</p>
-                            <div data-form="qualification-type"></div>
-                        </div>
-
-                        <div class="form__item">
-                            <p class="form__label">Institution</p>
-                            <div data-form="institution"></div>
-                        </div>
-
-                        <div class="form__item">
-                            <p class="form__label">Subject</p>
-                            <div data-form="subject"></div>
-                        </div>
-
-                        <div class="form__item">
-                            <p class="form__label">Mark</p>
-                            <div data-form="mark"></div>
-                        </div>
-
-                        <div class="form__item">
-                            <div class="form__label">Year</div>
-                            <div data-form="year"></div>
-                        </div>
-
-                        <div class="form__item">
-                            <div class="form__label">Verified</div>
-                            <div data-form="verified-yes"></div>
-                        </div>
-
-                        <div class="form__item">
-                            <div class="form__label">Verified</div>
-                            <div data-form="verified-no"></div>
-                        </div>
                     </fieldset>
                 </form>
             </div>
